SET( PROJECT "visiting" )
SET( TARGET_NAME snark_${PROJECT} )

#FILE( GLOB source   ${SOURCE_CODE_BASE_DIR}/${PROJECT}/*.cpp)
FILE( GLOB includes ${SOURCE_CODE_BASE_DIR}/${PROJECT}/*.h)

SOURCE_GROUP( ${PROJECT} FILES ${source} ${includes} )
ADD_CUSTOM_TARGET( ${TARGET_NAME} ${source} ${includes} )
TARGET_LINK_LIBRARIES( ${TARGET_NAME} )

INSTALL( FILES ${includes} DESTINATION ${CMAKE_INSTALL_PREFIX}/${snark_INSTALL_INCLUDE_DIR}/${PROJECT} )

#IF( snark_BUILD_TESTS )
#    ADD_SUBDIRECTORY( test )
#ENDIF( snark_BUILD_TESTS )
